--- a/css/app.css
+++ b/css/app.css
@@ -1,55 +1,23 @@
+/* Variables */
 :root {
     --ams-blue: #093c7d;
     --ams-background: #ebf5fc;
 }
+/* HTML-Tags */
+i { text-align: center; width: 1.2em;}
 
-#wrapper {
-    background-color: var(--ams-background);
-}
+/* Styling for ids */
+#wrapper {background-color: var(--ams-background);}
+#page-logo {width: 70px; height: auto;}
+#nostyle {list-style: none;}
 
-#page-logo {
-    width: 70px;
-    height: auto;
-}
-
-.form-button-wrap {
-    display: flex;
-}
-
-.form-button {
-    width: 100%;
-    align-self: flex-end;
-}
-
-i {
-    text-align: center;
-    width: 1.2em;
-}
-.cr-list{
-	list-style:none;
-	width:50%;
-}
-.cr-gewichtung{
-	width:10%;
-}
-.criterion {
-    font-weight: bold;
-    font-size: 1.3em;
-}
-.subcriterion {
-    font-style: italic;
-    font-size: 1.2em;
-}
-.buttonrow{
-	text-align:center;
-}
-.rrtable th, .rrtable td {
-	padding: 0rem;
-}
-#nostyle {
-    list-style: none;
-}
-
-.checkbox-table {
-    max-width: 1em;
-}
+/* Styling for classes */
+.form-button-wrap {display: flex;}
+.form-button {width: 100%; align-self: flex-end;}
+.cr-list {list-style:none; width:50%;}
+.cr-gewichtung {width:10%;}
+.criterion {font-weight: bold; font-size: 1.3em;}
+.subcriterion {font-style: italic; font-size: 1.2em;}
+.buttonrow {text-align:center;}
+.rrtable th, .rrtable td {padding: 0rem;}
+.checkbox-table {max-width: 1em;}
