--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,7 @@ i { text-align: center; width: 1.2em;}
 /* Styling for ids */
 #wrapper {background-color: var(--ams-background);}
 #page-logo {width: 70px; height: auto;}
-#nostyle {list-style: none;}
+#no-style {list-style: none;}
 
 /* Styling for classes */
 .form-button-wrap {display: flex;}
