New temporary design for front-page with cards (placeholder-text).

--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@
 }
 
 /* HTML-Tags */
-i { text-align: center; width: 1.2em;}
+.fa, .fas { text-align: center; width: 1.2em;}
 
 /* Styling for ids */
 #wrapper {background-color: var(--ams-background);}
@@ -22,3 +22,9 @@ i { text-align: center; width: 1.2em;}
 .buttonrow {text-align:center;}
 .rrtable th, .rrtable td {padding: 0rem;}
 .checkbox-table {max-width: 1em;}
+.card-landing {margin-bottom: 1em;}
+.card-landing:hover {
+    -webkit-box-shadow: 10px 10px 26px -8px rgba(9,59,125,1);
+    -moz-box-shadow: 10px 10px 26px -8px rgba(9,59,125,1);
+    box-shadow: 10px 10px 26px -8px rgba(9,59,125,1);
+}
