--- a/css/reviews.css
+++ b/css/reviews.css
@@ -3,7 +3,7 @@ canvas{
 	width:70% !important;
 }
 ul.no-style{
-	list-style:none;
+	list-style:none; // will be replaced with BS classes
 }
 .mth-label{
 	color: red;
