Come to the dark side, we have more readable text.

--- a/css/app.css
+++ b/css/app.css
@@ -7,7 +7,7 @@
 }
 
 /* HTML-Tags */
-
+body {color: darkslategrey}
 
 /* Styling for ids */
 #wrapper {background-color: var(--ams-background);}
@@ -25,7 +25,7 @@
 .buttonrow {text-align: center;}
 .rrtable th, .rrtable td {padding: 0;}
 .checkbox-table {max-width: 1em;}
-.card-landing {margin-bottom: 1em; height: 13em;}
+.card-landing {margin-bottom: 1em; min-height: 13em;}
 .card-landing:hover {
     -webkit-box-shadow: 10px 10px 26px -8px rgba(9,59,125,1);
     -moz-box-shadow: 10px 10px 26px -8px rgba(9,59,125,1);
