Fifty Shades of grey text-color.

--- a/css/app.css
+++ b/css/app.css
@@ -7,7 +7,7 @@
 }
 
 /* HTML-Tags */
-body {color: darkslategrey}
+body {color: #3a3a3a}
 
 /* Styling for ids */
 #wrapper {background-color: var(--ams-background);}
