--- a/css/app.css
+++ b/css/app.css
@@ -9,10 +9,12 @@
 /* HTML-Tags */
 body {color: #3a3a3a}
 
+
 /* Styling for ids */
 #wrapper {background-color: var(--ams-background);}
 #page-logo {width: 70px; height: auto;}
 #no-style {list-style: none;}
+table#overview th {min-width: 10em}
 
 /* Styling for classes */
 .fa, .fas { text-align: center; width: 1.2em;}
