Design for ams_response.

--- a/css/app.css
+++ b/css/app.css
@@ -26,6 +26,7 @@ table#overview th {min-width: 10em}
 .subcriterion {font-style: italic; font-size: 1.2em;}
 .buttonrow {text-align: center;}
 .rrtable th, .rrtable td {padding: 0;}
+.table-response th, .table-response td {width: 25%;}
 .checkbox-table {max-width: 1em;}
 .card-landing {margin-bottom: 1em; min-height: 13em;}
 .card-landing:hover {
