--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@ body {color: #3a3a3a}
 #wrapper {background-color: var(--ams-background);}
 #page-logo {max-width: 100px; height: auto;}
 #no-style {list-style: none;}
+.no-style {list-style: none;}
 table#overview th {min-width: 10em}
 
 /* Styling for classes */
